--- a/lineman/app/modules/dashboard_page/dashboard_page.haml
+++ b/lineman/app/modules/dashboard_page/dashboard_page.haml
@@ -60,6 +60,11 @@
             .dashboard-page-group{ng-repeat: 'group in dashboardGroups() | orderBy:groupName'}
               .dashboard-page-threads-container{ng-if: 'anyThisGroup(group)'}
                 %img.selector-list-item-group-logo.pull-left{src: "{{group.logoUrl()}}"}>
-                %h3.dashboard-page-group-name {{group.name}}
+                %h3.dashboard-page-group-name
+                  %a{href: '/g/{{group.key}}'} {{group.name}}
                 .dashboard-page-threads
-                  %dashboard_page_thread{discussion: 'discussion', show-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:limitFor:group.id | filter:unread'}
+                  %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:limitFor:group.id | filter:unread'}
+                .dashboard-page-loading.page-loading{ng-show: 'loadingDiscussions{{group.id}}'}
+                  %i.fa.fa-lg.fa-spin.fa-circle-o-notch
+                .dashboard-page-show-more
+                  %a{ng-hide: 'loadingDiscussions{{group.id}}', translate: 'dashboard_page.load_more', ng-click:'loadMoreFromGroup(group)', href: '#'}
