--- a/lineman/app/modules/dashboard_page/dashboard_page.haml
+++ b/lineman/app/modules/dashboard_page/dashboard_page.haml
@@ -36,23 +36,23 @@
             .dashboard-page-threads-container{ng-if: 'anyToday()'}
               %h3{translate: 'common.date_range.today'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:limitFor | filter:today'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:today'}
             .dashboard-page-threads-container{ng-if: 'anyYesterday()'}
               %h3{translate: 'common.date_range.yesterday'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:limitFor | filter:yesterday'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:yesterday'}
             .dashboard-page-threads-container{ng-if: 'anyThisWeek()'}
               %h3{translate: 'common.date_range.this_week'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:limitFor | filter:thisWeek'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisWeek'}
             .dashboard-page-threads-container{ng-if: 'anyThisMonth()'}
               %h3{translate: 'common.date_range.this_month'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:limitFor | filter:thisMonth'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisMonth'}
             .dashboard-page-threads-container{ng-if: 'anyOlder()'}
               %h3{translate: 'common.date_range.older'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:limitFor | filter:older'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:older'}
             .dashboard-page-footer{in-view: '$inview && footerReached(event)', in-view-options: '{debounce: 200}'} .
             .dashboard-page-loading.page-loading{ng-show: 'loadingDiscussions'}
               %i.fa.fa-lg.fa-spin.fa-circle-o-notch
@@ -63,8 +63,8 @@
                 %h3.dashboard-page-group-name
                   %a{href: '/g/{{group.key}}'} {{group.name}}
                 .dashboard-page-threads
-                  %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:limitFor:group.id | filter:unread'}
+                  %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:loadedCount:group.id | filter:unread'}
                 .dashboard-page-loading.page-loading{ng-show: 'loadingDiscussions{{group.id}}'}
                   %i.fa.fa-lg.fa-spin.fa-circle-o-notch
                 .dashboard-page-show-more
-                  %a{ng-hide: 'loadingDiscussions{{group.id}}', translate: 'dashboard_page.load_more', ng-click:'loadMoreFromGroup(group)', href: '#'}
+                  %a{ng-hide: 'loadingDiscussions{{group.id}} || groupIsExpanded(group.id)', translate: 'dashboard_page.load_more', ng-click:'loadMoreFromGroup(group)', href: '#'}
