Move towards getting dashboard to work with new router

--- a/lineman/app/components/dashboard_page/dashboard_page.haml
+++ b/lineman/app/components/dashboard_page/dashboard_page.haml
@@ -36,35 +36,35 @@
             .dashboard-page-threads-container{ng-if: 'dashboardPage.anyToday()'}
               %h3{translate: 'common.date_range.today'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:today'}
-            .dashboard-page-threads-container{ng-if: 'anyYesterday()'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:today'}
+            .dashboard-page-threads-container{ng-if: 'dashboardPage.anyYesterday()'}
               %h3{translate: 'common.date_range.yesterday'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:yesterday'}
-            .dashboard-page-threads-container{ng-if: 'anyThisWeek()'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:yesterday'}
+            .dashboard-page-threads-container{ng-if: 'dashboardPage.anyThisWeek()'}
               %h3{translate: 'common.date_range.this_week'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisWeek'}
-            .dashboard-page-threads-container{ng-if: 'anyThisMonth()'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisWeek'}
+            .dashboard-page-threads-container{ng-if: 'dashboardPage.anyThisMonth()'}
               %h3{translate: 'common.date_range.this_month'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisMonth'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisMonth'}
             .dashboard-page-threads-container{ng-if: 'anyOlder()'}
               %h3{translate: 'common.date_range.older'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:older'}
-            .dashboard-page-footer{in-view: '$inview && footerReached(event)', in-view-options: '{debounce: 200}'} .
-            .dashboard-page-loading.page-loading{ng-show: 'loadingDiscussions'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:older'}
+            .dashboard-page-footer{in-view: '$inview && dashboardPage.footerReached(event)', in-view-options: '{debounce: 200}'} .
+            .dashboard-page-loading.page-loading{ng-show: 'dashboardPage.loadingDiscussions'}
               %i.fa.fa-lg.fa-spin.fa-circle-o-notch
-          .dashboard-page-sort-date{ng-if: 'sort == "group"'}
-            .dashboard-page-group{ng-repeat: 'group in dashboardGroups() | orderBy:groupName'}
-              .dashboard-page-threads-container{ng-if: 'anyThisGroup(group)'}
+          .dashboard-page-sort-date{ng-if: 'dashboardPage.sort == "group"'}
+            .dashboard-page-group{ng-repeat: 'group in dashboardPage.dashboardGroups() | orderBy:groupName'}
+              .dashboard-page-threads-container{ng-if: 'dashboardPage.anyThisGroup(group)'}
                 %img.selector-list-item-group-logo.pull-left{src: "{{group.logoUrl()}}"}>
                 %h3.dashboard-page-group-name
                   %a{href: '/g/{{group.key}}'} {{group.name}}
                 .dashboard-page-threads
                   %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:loadedCount:group.id | filter:unread'}
-                .dashboard-page-loading.page-loading{ng-show: 'loadingDiscussions{{group.id}}'}
+                .dashboard-page-loading.page-loading{ng-show: 'dashboardPage.loadingDiscussions{{group.id}}'}
                   %i.fa.fa-lg.fa-spin.fa-circle-o-notch
                 .dashboard-page-show-more
-                  %a{ng-hide: 'loadingDiscussions{{group.id}} || groupIsExpanded(group.id)', translate: 'dashboard_page.load_more', ng-click:'loadMoreFromGroup(group)', href: '#'}
+                  %a{ng-hide: 'dashboardPage.loadingDiscussions{{group.id}} || dashboardPage.groupIsExpanded(group.id)', translate: 'dashboard_page.load_more', ng-click:'dashboardPage.loadMoreFromGroup(group)', href: '#'}
