--- a/lineman/app/components/dashboard_page/dashboard_page.haml
+++ b/lineman/app/components/dashboard_page/dashboard_page.haml
@@ -36,23 +36,23 @@
             .dashboard-page-threads-container{ng-if: 'dashboardPage.anyToday()'}
               %h3{translate: 'common.date_range.today'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:today'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:dashboardPage.lastInboxActivity | filter:dashboardPage.unread | limitByFn:dashboardPage.loadedCount | filter:dashboardPage.today'}
             .dashboard-page-threads-container{ng-if: 'dashboardPage.anyYesterday()'}
               %h3{translate: 'common.date_range.yesterday'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:yesterday'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:dashboardPage.lastInboxActivity | filter:dashboardPage.unread | limitByFn:dashboardPage.loadedCount | filter:dashboardPage.yesterday'}
             .dashboard-page-threads-container{ng-if: 'dashboardPage.anyThisWeek()'}
               %h3{translate: 'common.date_range.this_week'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisWeek'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:dashboardPage.lastInboxActivity | filter:dashboardPage.unread | limitByFn:dashboardPage.loadedCount | filter:dashboardPage.thisWeek'}
             .dashboard-page-threads-container{ng-if: 'dashboardPage.anyThisMonth()'}
               %h3{translate: 'common.date_range.this_month'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:thisMonth'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:dashboardPage.lastInboxActivity | filter:dashboardPage.unread | limitByFn:dashboardPage.loadedCount | filter:dashboardPage.thisMonth'}
             .dashboard-page-threads-container{ng-if: 'anyOlder()'}
               %h3{translate: 'common.date_range.older'}
               .dashboard-page-threads
-                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:lastInboxActivity | filter:unread | limitByFn:loadedCount | filter:older'}
+                %dashboard_page_thread{discussion: 'discussion', ng-repeat: 'discussion in dashboardPage.dashboardDiscussions() | orderBy:dashboardPage.lastInboxActivity | filter:dashboardPage.unread | limitByFn:dashboardPage.loadedCount | filter:dashboardPage.older'}
             .dashboard-page-footer{in-view: '$inview && dashboardPage.footerReached(event)', in-view-options: '{debounce: 200}'} .
             .dashboard-page-loading.page-loading{ng-show: 'dashboardPage.loadingDiscussions'}
               %i.fa.fa-lg.fa-spin.fa-circle-o-notch
@@ -63,7 +63,7 @@
                 %h3.dashboard-page-group-name
                   %a{href: '/g/{{group.key}}'} {{group.name}}
                 .dashboard-page-threads
-                  %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:lastInboxActivity | limitByFn:loadedCount:group.id | filter:unread'}
+                  %dashboard_page_thread{discussion: 'discussion', hide-group-logo: true, ng-repeat: 'discussion in group.organizationDiscussions() | orderBy:dashboardPage.lastInboxActivity | limitByFn:dashboardPage.loadedCount:group.id | filter:dashboardPage.unread'}
                 .dashboard-page-loading.page-loading{ng-show: 'dashboardPage.loadingDiscussions{{group.id}}'}
                   %i.fa.fa-lg.fa-spin.fa-circle-o-notch
                 .dashboard-page-show-more
